2006-05-10  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Use C comment syntax, not C++ syntax.

	* tests/altest/altest.c: Start from scratch (i.e. altest.cpp) again to
	get more meaningful and fine-grained commits. Will not compile for the
	next few commits, sorry...

2006-02-08  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Warning police.

	* admin/autotools/.indent.pro, configure.ac, demos/Makefile.am: Hooked
	in a slightly overhauled version of the panning2d demo. The OpenAL and
	GLUT flags are currently hardwired, which is obviously wrong and only a
	temporary measure.

	* admin/autotools/m4/alut_c__attribute.m4, demos/panning2d/.cvsignore,
	demos/panning2d/Makefile.am, demos/panning2d/panning2d.c,
	demos/panning2d/sounds/boom.wav: Added.

	* tests/altest/altest.c(FA_GetBufferProperties): Emit a warning when
	alIsBuffer does not return AL_FALSE for AL_NONE.

	* tests/altest/altest.c(FA_EnumerationValue): Test that alcGetEnumValue
	and alGetEnumValue are really disjunct.

2006-01-20  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(SA_ListenerOrientation): Don't use the ambiguous
	"foo=-1".

	* tests/altest/altest.c(FA_EnumerationValue): Distinguish between ALC
	enums and AL enums.

	* tests/altest/altest.c(I_SetSourceOffsetTest): Fixed ambiguity.

	* Initial version. Very incomplete, just to get "contrib" started.