@@ -1,5 +1,7 @@
 2006-05-10  Sven Panne  <sven.panne@aedion.de>
 
+	* tests/altest/altest.c: Simplified header inclusion.
+
 	* tests/altest/altest.c: Use C comment syntax, not C++ syntax.
 
 	* tests/altest/altest.c: Start from scratch (i.e. altest.cpp) again to
